--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,14 @@
         "sourceType": "module"
     },
     "rules": {
-        "linebreak-style": ["error", "windows"]
-    }
+        "linebreak-style": ["error", "windows"],
+        "max-len":"error"
+    },
+    "ignorePatterns": ["temp.js", "**/vendor/*.js"]
+   
+    
+    
+    
+    
+    
 }
