--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,7 @@
         "linebreak-style": ["error", "windows"],
         "max-len":"error"
     },
-    "ignorePatterns": ["dropDownApp.js", "dropDownUst.js", "dropDownIng.js", "first_algorithm.js", "function_normalizeValue.js", "main_searchbar.js", "main.js", "navigation_inside_button.js", "recipes_display.js", "refresh_items.js", "search_inside_mainSearchBar.js", "tag.js", "TagApp.js", "TagIng.js", "TagUst.js", "**/vendor/*.js"]
+    "ignorePatterns": ["dropDownApp.js", "dropDownUst.js", "dropDownIng.js", "first_algorithm.js", "function_normalizeValue.js", "main_searchbar.js", "main.js", "navigation_inside_button.js", "recipes_display.js", "refresh_items.js", "search_inside_mainSearchBar.js", "tag.js", "TagApp.js", "TagIng.js", "TagUst.js","datas.js", "**/vendor/*.js"]
    
     
 }
